egress-policy.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: whitelist-dqhub-push-api
  namespace: tpsuat-dev
spec:
  endpointSelector:
    matchLabels:
      app: dqt-punctuality-service
  egress:
  - toFQDNs:
    - matchName: "dqhub-uat-push-api.fr.world.socgen"
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      rules:
        dns:
        - matchPattern: "*"
